# bluebird

./: .gitignore  CMakeLists.txt  Makefile  README.md  code_of_conduct.md  compile_commands.json  log4cpp.properties
app/: CMakeLists.txt  callback.cpp  callback.h  main.cpp  piperi.h  util.cpp  util.h
src/: CMakeLists.txt  Makefile  characteristic.c  characteristic.h  main.c  main.cc  main.h  peripheral.c  peripheral.h  service.c  service.h
src/tests/: CMakeLists.txt  Makefile  compile_commands.json  main.c  test-canary.c  test-characteristic.c  test-hci.c  test-peripheral.c  test-service-creation.c  test-service.c  test.c  unity-tests.h
tests/: CMakeLists.txt  cutesttest.cpp
